Fighter max-width to prevent overflow

--- a/public/fight.css
+++ b/public/fight.css
@@ -56,7 +56,8 @@
 
 .fighter {
     margin-bottom: 10px;
-    flex: 1 0 400px;
+    flex: 0 0 400px;
+    max-width: 500px;
 }
 
 .fighter header {
